--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 4.25.0, Date: 2020-12-14
+- Fixed an issue in the data collection content script
+- Removed the functionality to open the /update page
+
 Version: 4.24.1, Date: 2020-11-19
 - Continue to show the /update page to users that have not seen it.  The /update page lets users know what features have been updated in the last 6 months.
 - Fixed an issue with the Stats / charting feature in AdBlock incorrectly processing blank hostnames.
